매출액 시각화 수정_이종민

--- a/매출액,금리,환율/매출액 전처리.ipynb
+++ b/매출액,금리,환율/매출액 전처리.ipynb
@@ -30,7 +30,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "list=['KB 금융','LG 생활건강','LG 화학','SK 텔레콤','네이버','삼성물산','삼성바이오로직스','삼성전자','포스코 케미칼','한국전력','현대 모비스','현대차']"
+    "list=['KB 금융','LG 생활건강','LG 화학','NAVER','SK 텔레콤','삼성물산','삼성바이오로직스','삼성전자','포스코 케미칼','한국전력','현대 모비스','현대차']"
    ]
   },
   {
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "id": "d6b07bca",
    "metadata": {},
    "outputs": [],
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "id": "01c3d2e0",
    "metadata": {},
    "outputs": [
@@ -244,7 +244,7 @@
        "16년09월(3Q)    NaN   5,774"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 16,
    "id": "0701dbec",
    "metadata": {
     "scrolled": true
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 22,
    "id": "18100e6a",
    "metadata": {},
    "outputs": [],
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 12,
    "id": "0f20625c",
    "metadata": {},
    "outputs": [],
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 17,
    "id": "790f2745",
    "metadata": {},
    "outputs": [
@@ -320,7 +320,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-37-eae0f199ad4f>:4: SettingWithCopyWarning: \n",
+      "<ipython-input-17-eae0f199ad4f>:4: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -339,13 +339,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 18,
    "id": "dd9c609a",
    "metadata": {},
    "outputs": [],
    "source": [
     "df_merge=df_merge.astype(float)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "41b17f1d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_merge=df_merge.sort_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4b5ba279",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
